# lib/db/src/schema/index.ts
@@ -2,3 +2,4 @@ export * from "./patients";
 export * from "./operatingRooms";
 export * from "./surgeons";
 export * from "./surgeries";
+export * from "./dailyRosters";
